--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       </div>
     </section>
   </main>
+  <footer>
+    <p>
+      Coded by <a href="https://github.com/agusscript" target="_blank">Agustin Sanchez</a>
+    </p>
+  </footer>
   <script src="main.js"></script>
 </body>
 
