--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
     <footer>
       <p>
         Coded by
-        <a href="https://github.com/agusscript" target="_blank"
-          >Agustin Sanchez</a
-        >
+        <a href="https://github.com/agusscript" target="_blank">Agustin Sanchez</a>
       </p>
     </footer>
     <script type="module" src="/src/main.ts"></script>
